# burncloud-download-aria2

./: .gitignore  Cargo.toml  PORT_CONFLICT_RESOLUTION.md  README.md  TESTING.md  TEST_BAIDU_FAVICON.md  TEST_SUMMARY.md  TEST_TROUBLESHOOTING.md
docs/: README.md  aria2-download.md  daemon-process.md  error.md  lib.md  port-management.md  rpc-interfaces.md  technical-specification.md
docs/client/: mod.md  types.md
docs/daemon/: README.md  binary.md  mod.md  monitor.md  orchestrator.md  platform.md  process.md
docs/manager/: mapper.md  mod.md
docs/poller/: aggregator.md  mod.md
examples/: port_conflict_demo.rs
src/: error.rs  lib.rs  main.rs
src/client/: mod.rs  types.rs
src/daemon/: binary.rs  mod.rs  monitor.rs  orchestrator.rs  platform.rs  port_utils.rs  process.rs  tests.rs
src/manager/: mapper.rs  mod.rs  state.rs
src/poller/: aggregator.rs  mod.rs
tests/: daemon_integration_test.rs  integration_test.rs  mock_test.rs
