[package]
name = "burncloud-download-aria2"
version = "0.1.0"
edition = "2021"
description = "Aria2 backend implementation for BurnCloud download manager"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
burncloud-download-types = { path = "../burncloud-download-types" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
zip = "2.1"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"